# walkman_ros_trajgen

./: CMakeLists.txt  README  package.xml
include/mvnbiomech/: parsermanager.h  quaterniondatagram.h  server.h  socket.h  udpserver.h
include/walkman_trajgen/: WBTrajectoryGenerator.h
launch/: bigman_world.launch
msg/: JointLinearInterpolationParameters.msg
scripts/: ros-xsens-udp.py
src/: joint-trajgen-and-mvnbiomech.cpp  joint-trajgen-pub.cpp  joint-trajgen-pub.cpp.bak  mvnbiomech-jointstate-logger.cpp
src/mvnbiomech/: parsermanager.cpp  quaterniondatagram.cpp  server.cpp  socket.cpp  udpserver.cpp
src/walkman_trajgen/: WBTrajectoryGenerator.cpp
srv/: JointLinearInterpolation.srv  JointLinearTrajectory.srv  PoseInterpolation.srv  PreRecordedTrajectory.srv  SetPose.srv  WBJointLinearInterpolation.srv
